<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/babyblue"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/myImageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="84dp"
        android:src="@drawable/mainphoto"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/launch_login"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_title" />

    <TextView
        android:id="@+id/main_title"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="76dp"
        android:fontFamily="@font/montserrat_subrayada_bold"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/blue"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myImageView" />

    <Button
        android:id="@+id/launch_signup"
        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/signup"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/launch_login"
        app:layout_constraintVertical_bias="0.056" />
</androidx.constraintlayout.widget.ConstraintLayout>